Fixes the acts_as_stockable extension
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1713 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1854,6 +1854,8 @@ arb:
       label:
         with_tracking: '%{warehouse} : الحصة %{tracking}, %{quantity}%{unit} المتوفرة'
         without_tracking: '%{warehouse} : غير متتبع, %{quantity}%{unit} متاح'
+    stock_move:
+      #>default_name: '%{origin} (%{code})'
     stock_transfer:
       natures:
         transfer: 'التحويل'
