--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -189,6 +189,7 @@ fra:
       stock_transfer_create: 'Ajouter un transfert ou une perte de stocks'
       stock_transfer_update: 'Modifier l''un transfert de stock'
       stock_transfers: 'Transferts et pertes de stocks'
+      stock_transfers_confirm: 'Transferts à réaliser'
       stocks: 'État des stocks'
       subscription_create: 'Création d''un abonnement'
       subscription_nature_create: 'Ajouter un type d''abonnement'
@@ -203,7 +204,6 @@ fra:
       transport_update: 'Modifier le transport'
       transports: 'Transports'
       undelivered_sales: 'Livraisons en attente'
-      unexecuted_transfers: 'Transferts à réaliser'
       warehouse: 'Détail du lieu de stockage : %{name}'
       warehouse_create: 'Ajout d''un lieu de stockage'
       warehouse_update: 'Modifier l''un lieu de stockage'
