--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -186,6 +186,7 @@ jpn:
       #>stock_transfer_create: 'Add a new stock transfer or loss'
       #>stock_transfer_update: 'Edit the stock transfer/loss'
       #>stock_transfers: 'Transfers and loss'
+      #>stock_transfers_confirm: 'Waiting stock transfers'
       #>stocks: 'Stocks state'
       #>subscription_create: 'Add a new subscription'
       #>subscription_nature_create: 'Add a new subscription type'
@@ -200,7 +201,6 @@ jpn:
       #>transport_update: 'Edit the transport'
       #>transports: 'Transports'
       #>undelivered_sales: 'Waiting deliveries'
-      #>unexecuted_transfers: 'Waiting stock transfers'
       #>warehouse: 'Warehouse: %{name}'
       #>warehouse_create: 'Add a new warehouse'
       #>warehouse_update: 'Edit the warehouse: %{name}'
