--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -189,6 +189,7 @@ spa:
       #>stock_transfer_create: 'Add a new stock transfer or loss'
       #>stock_transfer_update: 'Edit the stock transfer/loss'
       #>stock_transfers: 'Transfers and loss'
+      #>stock_transfers_confirm: 'Waiting stock transfers'
       #>stocks: 'Stocks state'
       #>subscription_create: 'Add a new subscription'
       #>subscription_nature_create: 'Add a new subscription type'
@@ -203,7 +204,6 @@ spa:
       #>transport_update: 'Edit the transport'
       #>transports: 'Transports'
       #>undelivered_sales: 'Waiting deliveries'
-      #>unexecuted_transfers: 'Waiting stock transfers'
       warehouse: 'Detaile del lugar de deposito : %{name}'
       warehouse_create: 'Añadir un lugar de deposito'
       warehouse_update: 'Modificacion de un lugar de deposito'
