--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -123,6 +123,7 @@ jpn:
       #>delay_create: 'Add a new delay'
       #>delay_update: 'Edit the delay: %{name}'
       #>delays: 'Delays'
+      #>incoming_deliveries: 'Incoming deliveries'
       #>incoming_delivery_create: 'Add a new incoming delivery'
       #>incoming_delivery_mode_create: 'Add a new incoming delivery mode'
       #>incoming_delivery_mode_update: 'Edit the incoming delivery mode: %{name}'
@@ -132,6 +133,7 @@ jpn:
       #>inventories: 'Inventories'
       #>inventory_create: 'Add a new inventory'
       #>inventory_update: 'Edit the inventory'
+      #>outgoing_deliveries: 'Outgoing deliveries'
       #>outgoing_delivery_create: 'Add a new delivery'
       #>outgoing_delivery_mode_create: 'Add a new outgoing delivery mode'
       #>outgoing_delivery_mode_update: 'Edit the outgoing delivery mode: %{name}'
@@ -446,7 +448,12 @@ jpn:
     #>created_on: 'Created on'
     #>credit: 'Credit'
     #>credits: 'Credits'
+    criterion_modes:
+      #>all: 'All'
+      #>confirmed: 'Confirmed'
+      #>unconfirmed: 'Unconfirmed'
     #>critic_stock_min: 'Critic stock min'
+    #>critic_stocks: 'Stocks below critical threshold'
     #>csv_statistics: 'CSV statistics'
     #>cumul: 'Accumulation of tattle and previous balance N°%{number}'
     #>current: 'Current'
@@ -625,7 +632,6 @@ jpn:
     #>localization: 'Localization'
     location_tabbox: #!
     #>lock: 'Lock'
-    #>low_stocks: 'Stocks below critical threshold'
     #>mail: 'Send an email'
     #>mailing: 'Mailing'
     mails:
@@ -660,6 +666,7 @@ jpn:
     missing_help: '無意味なページ'
     #>mistake_on_quantities_sum: 'The sum of the quantities are not equals to the total produced quantity'
     #>mobile: 'Mobile'
+    #>modes: 'Modes'
     #>modules: 'Modules'
     #>month_period: '%{code} - %{month} %{year}'
     #>monthly: 'Monthly'
@@ -677,7 +684,6 @@ jpn:
     nb_mandates: #!
     nb_products: #!
     nb_purchases: #!
-    nb_transfers: #!
     #>nb_years: 'Years'
     #>need_entities_to_consult_mandates: 'You have to create some people before using mandates'
     #>need_warehouse_to_create_production: 'You have to register a warehouse before using production'
@@ -1070,6 +1076,9 @@ jpn:
       #>one: '1 sales invoice'
       #>other: '%{count} sales invoices'
       #>zero: '0 sales invoices'
+    x_stock_transfers_to_confirm:
+      #>one: '%{count} stock transfer to confirm'
+      #>other: '%{count} stock transfers to confirm'
     x_subscriptions:
       #>one: '1 subscription'
       #>other: '%{count} subscriptions'
@@ -1077,10 +1086,12 @@ jpn:
     #>x_unit: '%{quantity}%{unit}'
     #>x_unit_of_product_per_second: '%{quantity}%{unit}/s of %{product}'
     #>x_unit_per_second: 'Flow: %{quantity}%{unit}/s'
+    x_waiting_incoming_deliveries:
+      #>one: '%{count} waiting incoming delivery'
+      #>other: '%{count} waiting incoming deliveries'
     x_waiting_outgoing_deliveries:
-      #>one: '1 waiting delivery'
-      #>other: '%{count} waiting deliveries'
-      #>zero: 'No waiting deliveries'
+      #>one: '%{count} waiting outgoing delivery'
+      #>other: '%{count} waiting outgoing deliveries'
     #>y: 'Yes'
     #>yearly: 'Yearly'
   notifications:
