--- a/config/locales/fra/help/finances-taxes.txt
+++ b/config/locales/fra/help/finances-taxes.txt
@@ -8,7 +8,7 @@ Les taxes sont **utilisées au moment de définir vos tarifs**.
 
   * La **nature** et la **valeur** permettent de calculer le montant de la taxe pour tout tarif et tout produit. 
   * Si la nature est un **montant**, la valeur de la taxe sera simplement ajoutée au prix hors taxes du produit.  
-  * Si la nature est un **pourcentage**, la **valeur doit être comprise entre 0 et 1** et représente la valeur numérique du pourcentage (ex: TVA 19.6%, 19,6 / 100, valeur = 0,196)
+  * Si la nature est un **pourcentage**, la **valeur doit être comprise entre 0 et 100** et représente la valeur numérique du pourcentage (ex: TVA 19.6%, valeur = 19,6)
   * **Incluse** permet de savoir si la taxe est incluse ou non dans le prix du produit.
   * **Réductible** permet de savoir si le montant de la taxe diminue proportionellement à une réduction du prix du produit.
 
