Fixes some bugs with SQL Server
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1717 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1167,7 +1167,7 @@ eng:
         journal: 'Journal'
         other: 'Other'
         purchase: 'Purchase order'
-        sale: 'sale'
+        sales_order: 'Sales order'
         sales_invoice: 'Sales invoice'
         stocks: 'Stocks'
         transport: 'Transport'
