Fixes some bugs
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1723 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/arb/models.yml
+++ b/config-3/locales/arb/models.yml
@@ -1648,8 +1648,9 @@ arb:
         journal: 'الدفتر اليومي'
         other: 'اخرى'
         purchase: 'طلب الممول'
-        sale: 'طلب / اقتباس'
+        sale: 'طلب / اقتباس' #!
         sales_invoice: 'فاتورة العميل'
+        #>sales_order: 'Sales order'
         stocks: 'حالة الاسهم'
         transport: 'وسائل النقل'
       unvalid_nature: 'نوع نموذجكم غير صحيح، يجب عليكم حذف هذا النموذج واعادة تثبيته.'
