--- a/config-3/locales/spa/models.yml
+++ b/config-3/locales/spa/models.yml
@@ -1182,8 +1182,8 @@ spa:
         #>journal: 'Journal'
         #>other: 'Other'
         #>purchase: 'Purchase order'
-        #>sale: 'sale'
         #>sales_invoice: 'Sales invoice'
+        #>sales_order: 'Sales order'
         #>stocks: 'Stocks'
         #>transport: 'Transport'
       #>unvalid_nature: 'Unvalid type of document template.'
