--- a/config-3/locales/spa/action.yml
+++ b/config-3/locales/spa/action.yml
@@ -180,6 +180,7 @@ spa:
       #>sale_nature_update: 'Edit the sale type: %{name}'
       #>sale_natures: 'Sale types'
       #>sale_propose: 'Propose estimate'
+      #>sale_propose_and_invoice: 'Invoice quickly'
       #>sale_refuse: 'Estimate refused'
       #>sale_update: 'Edit the sale %{number}'
       #>sales: 'Sales'
