--- a/config-3/locales/eng/action.yml
+++ b/config-3/locales/eng/action.yml
@@ -459,6 +459,7 @@ eng:
       area_update: 'Edit the postal area: %{name}'
       areas: 'Postal areas'
       #>areas_kame: 'Areas kame'
+      #>attorneys_accounts_dyli: 'Attorneys accounts dyli'
       #>auto_complete_for_contact_line_6: 'Auto complete for contact line 6'
       #>auto_complete_for_entity_origin: 'Auto complete for entity origin'
       #>auto_complete_for_event_location: 'Auto complete for event location'
@@ -468,6 +469,7 @@ eng:
       #>auto_complete_for_mandate_title: 'Auto complete for mandate title'
       #>category_prices_kame: 'Category prices kame'
       #>change_minutes: 'Change minutes'
+      #>clients_accounts_dyli: 'Clients accounts dyli'
       contact_create: 'Add a new contact'
       #>contact_delete: 'Contact delete'
       contact_update: 'Edit the contact of %{entity}'
@@ -549,6 +551,7 @@ eng:
       #>observation_delete: 'Observation delete'
       observation_update: 'Edit the observation'
       #>recent_events_kame: 'Recent events kame'
+      #>suppliers_accounts_dyli: 'Suppliers accounts dyli'
       #>user_future_events_kame: 'User future events kame'
     resources:
       #>employee: 'Employee'
@@ -1173,6 +1176,7 @@ eng:
     select_columns: 'Select columns'
     select_date: 'Select date'
     select_date_generation: 'Limit date for generation'
+    select_document: 'Select document'
     select_existing_payment: 'Select existing payment'
     select_file_to_upload: 'Select file to upload'
     select_financial_year: 'Financial year'
