--- a/config-3/locales/eng/prints/journal.xml
+++ b/config-3/locales/eng/prints/journal.xml
@@ -26,10 +26,9 @@
       
       <!-- Array of entries of the journal for the matching period -->
       <table collection="journal.entry_lines_between(started_on, stopped_on)" fixed="true">
-	<column label="Date" property="entry/printed_on" width="20mm"/>
-	<column label="Créée le" property="entry/created_on" width="20mm"/>
-	<column label="Numéro" property="entry/number" width="15mm" align="left"/>
-	<column label="Libellé de l'écriture" property="name" width="75mm"/>
+	<column label="Date" property="entry/printed_on" width="19mm"/>
+	<column label="Number" property="entry/number" width="24mm" align="left"/>
+	<column label="Label ibellé de l'écriture" property="name" width="87mm"/>
 	<column label="N°Compte" property="account/number" width="20mm"/>
 	<column label="Débit" property="currency_debit" width="20mm" numeric="money"/>
 	<column label="Crédit" property="currency_credit" width="20mm" numeric="money"/>
