--- a/config-3/locales/jpn/action.yml
+++ b/config-3/locales/jpn/action.yml
@@ -900,6 +900,7 @@ jpn:
     #>select_columns: 'Select columns'
     #>select_date: 'Select date'
     #>select_date_generation: 'Limit date for generation'
+    #>select_document: 'Select document'
     #>select_existing_payment: 'Select existing payment'
     #>select_file_to_upload: 'Select file to upload'
     #>select_financial_year: 'Financial year'
