--- a/config-3/locales/spa/action.yml
+++ b/config-3/locales/spa/action.yml
@@ -1144,6 +1144,7 @@ spa:
     bad_file: 'El fichero no parece corresponder'
     bookkeeping_is_finished: 'La basula en contabilidad esta terminada.'
     bookkeeping_works_only_with: 'La bascula en contabilidad puede hacerse actualmente solo para : %{list}.'
+    #>can_not_mark_entry_lines: 'Can not mark these entry lines'
     cannot_delete_entity: 'No es posible suprimir esta papeleta porque tiene reseña historica contable'
     cannot_merge_an_entity_with_itself: 'No es posible fusionar una papeleta con si misma'
     cannot_merge_entities: 'Un error sobrevino. No es posible fusionar estas papeletas.'
